# studybuddy

./: API_ENDPOINTS.md  README.md  package-lock.json  package.json  tailwind.config.ts
backend/: .env  .gitignore  Cargo.toml
backend/.sqlx/: query-15e391063fc56cccb204275fef8e555f060c1387f3805d656f121a164b372a47.json  query-184a1ae0e1c8aa0ab2412a9ce2fd1220ec48298bd431656633d0657934219201.json  query-1f319dba1746f1a38b1d98dd314572144dfa061e39ce231d9fe4406df16bb4b5.json  query-279a299fe2a380a67ac3b402955bba2805723e4fa44a628f6c2799d700a4e065.json  query-2f8953ab297eecc17315553be36118dac6209fff68db37fe3b531a981d0a50cb.json  query-4d84ab291c941fba5001149715d8d07f0095eb16ae0348dab7e6ee9098c3db05.json  query-51921ff6ee22ff750bbda2b25af33494588c2266c4220e88b95dde429f615068.json  query-682eb6ca2c58591a79bdb9a48b64aed13c1b2d5a440ea64d21b5393b5e519d56.json  query-6f3cbae63f47dec464ed7874c3c0543e3d89d826ea7d6189bb31ad3f6f3a40a7.json  query-7b7c44214d3d85ac79749dc2a05ec675a7406d467f8be4c89dcc6eaaaeccc0a9.json  query-8957397f66c46efd2a4416cf9bce6c0eda0d5e693e56e8709ca2d01124753a47.json  query-b66305993b23c05a35135d811db4aa0208c9b57d6c4bfbfea955589fd68bd3ed.json  query-bb02ae4d7768eef91b1d0e75b3eea3f8b7034637954b9a43469687ad48fbfdda.json  query-c91c4fd43d47aa33516d21625f5da5527f024e3b38cdb49187df9bcef948194b.json  query-d711c593c7920be7b75c37430cc4d47a36bb2f398477c7dcce4350d83183c48d.json  query-da32d718641de214af8b51f71403b37b38fe0882deec8eece4e6ae89d2906767.json  query-e506e5cf98b41dbbc73bc30d4c7589fd2f791634343b15254c90854993fa89c1.json  query-ec0ba20ede6ceedc2d61e686acd1ba8ea00430ea5221561a45c82aec9ac16a64.json
backend/crates/app/: Cargo.toml
backend/crates/app/src/dtos/: claim.rs  concept.rs  llm.rs  mod.rs  note.rs  quiz.rs  reinforcement_unit.rs  resource.rs  settings.rs
backend/crates/app/src/services/: event.rs  mod.rs  progress.rs  question.rs  reinforcement_unit.rs  topic.rs  upload.rs
backend/crates/domain/src/: entities.rs  lib.rs  repository_traits.rs
backend/crates/infra/: Cargo.toml
backend/crates/infra/src/: db.rs  lib.rs  pdf.rs
backend/crates/infra/src/repositories/: claim.rs  concept.rs  event.rs  mod.rs  reinforcement_unit.rs  (+3 more)
backend/docs/: content-to-ru-pipeline.md
backend/migrations/: 20240101000000_initial.sql  20240102000000_pipeline.sql  20240103000000_claims_and_events.sql  20240104000000_content_pages.sql
backend/src/: error.rs
backend/src/routes/: auth.rs  llm.rs  mod.rs  notes.rs  quiz_sessions.rs  reinforcement_units.rs  resources.rs  study_sessions.rs
be/crates/app/: Cargo.toml
be/crates/app/src/: errors.rs
be/crates/infra/: Cargo.toml
be/crates/infra/src/: errors.rs
(+126 files in other folders)
