[workspace]
members = ["crates/domain", "crates/app", "crates/infra"]

[package]
name = "lugia"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "./crates/domain" }
app = { path = "./crates/app" }
infra = { path = "./crates/infra" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
http = "1"

[workspace.dependencies]
# Web
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie", "cookie-signed"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Auth
jsonwebtoken = "9"
sha2 = "0.10"
hex = "0.4"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# Validation
validator = { version = "0.19", features = ["derive"] }

# HTTP client (LLM proxy)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Slug generation (knowledge base paths)
slug = "0.1"

# PDF text extraction
pdf-extract = "0.10"
